--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+      "build": "bun run build.ts",
+      "exec": "./db.out",
+      "dev": "bun run build && bun run exec"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
